job feeds updates

--- a/Applicantapp/templates/login.html
+++ b/Applicantapp/templates/login.html
@@ -18,7 +18,7 @@
             </button>
         </form>
         <div class="text-center mt-4">
-             <a href="{% url 'register' %}" class="text-sm text-cyan-600 hover:text-cyan-800 font-semibold">Don't have an account? Sign up</a>
+             <a href="{% url 'career:register' %}" class="text-sm text-cyan-600 hover:text-cyan-800 font-semibold">Don't have an account? Sign up</a>
         </div>
     </div>
 </div>
